app/gateway/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gateway-policies
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  compression:
    - type: Gzip
  rateLimit:
    type: Local
    local:
      rules:
        - clientSelectors:
            - sourceCIDR:
              type: Distinct
              value: 0.0.0.0/0
          limit:
            requests: 10
            unit: Second
